--- a/lecture_1/ShortUrl/views/login.ejs
+++ b/lecture_1/ShortUrl/views/login.ejs
@@ -21,7 +21,7 @@
       label {
         display: block;
         margin-top: 10px;
-        color: #ffa500;
+        color: #2bd144;
       }
       input {
         width: 100%;
@@ -29,27 +29,25 @@
         margin-top: 5px;
         background-color: #333333;
         color: #ffffff;
-        border: 1px solid #ffa500;
+        border: 1px solid #2bd144;
       }
       button {
         margin-top: 20px;
         padding: 10px;
         width: 100%;
-        background-color: #ffa500;
+        background-color: #2bd144;
         color: #000000;
         border: none;
         cursor: pointer;
       }
       button:hover {
-        background-color: #ff8c00;
+        background-color: #1b8b2c;
       }
     </style>
   </head>
   <body>
-    <h2 >MiniMizer || Sign Up</h2>
-    <form action="/auth/signup" method="POST">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
+    <h2 >MiniMizer || Login</h2>
+    <form action="/auth/l/login" method="POST">
 
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required />
@@ -57,7 +55,7 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required />
 
-      <button type="submit">Sign Up</button>
+      <button type="submit">Sign In</button>
     </form>
   </body>
 </html>
